<resources>
    <string name="app_name">Vehiclent</string>


    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="firebase_path" translatable="false">locations</string>

    <string name="map_api2">AIzaSyDKpkPtlJLZC0KR-p-cvb4QXG_5JtXFL40</string>


    <string name="gps_disable">GPS is disabled in your device. Please turn on location of your device</string>
    <string name="turn_on">Turn on</string>
    <string name="permission">Please first turn on permission</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcomming_detail">Upcoming Detail</string>
    <string name="accept"><u>accept</u></string>
    <string name="reject"><u>Reject?</u></string>
    <string name="do_you_want_to">Do you Want to</string>
    <string name="otp">OTP</string>
    <string name="rating_to_customer">Rating to Customer</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations</string>
    <string name="done">Done</string>
    <string name="congo">Congratulations !</string>
    <string name="title_activity_location">Map</string>
    <string name="location">Location</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="how_it_works">How Its Work</string>
    <string name="payment">Payment</string>
    <string name="user_profile">Partner Profile</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="name">Name :-</string>
    <string name="useremail">Email :-</string>
    <string name="usermobile">Phone-No :-</string>
    <string name="useraddress">Address :-</string>
    <string name="earning_amount">Earning Amount :-</string>
    <string name="job_dete">Job Date :-</string>
    <string name="service">Service :-</string>
    <string name="earning_details">Earning Detail</string>
    <string name="car_model">Car Model :-</string>
    <string name="past_details">Past Detail</string>
    <string name="feedback">Feedback</string>
    <string name="password_forgot">Forgot Password</string>
    <string name="email">Email</string>
    <string name="enter_email_desc">Enter your email address and we\'ll send\n you link to reset your password</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="sign_up_user">sign up</string>
    <string name="forgot_passwordS">FORGOT PASSWORD?</string>
    <string name="spinner_title">Select Category</string>

    <string name="no_network_connection">Check your internet connection!!!</string>
    <string name="gender">Gender:-</string>

</resources>
