<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_weel"
    tools:context=".forgotPassword.ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_forgot"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorGreenButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/password_forgot"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_sp22" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_dp15"
                android:src="@drawable/back_arrow_w" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_forgot">

            <ImageView
                android:id="@+id/img_applogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_dp80"
                android:src="@drawable/new_logo" />

            <TextView
                android:id="@+id/tv_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_applogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_dp50"
                android:text="@string/forgot_passwordS"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_sp28" />

            <TextView
                android:id="@+id/tv_about_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgotpassword"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_dp8"
                android:gravity="center"
                android:text="@string/enter_email_desc"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_sp14" />


            <EditText
                android:id="@+id/edit_usereamil"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_dp50"
                android:layout_below="@+id/tv_about_forgotpassword"
                android:layout_marginLeft="@dimen/margin_dp35"
                android:layout_marginTop="@dimen/margin_dp25"
                android:layout_marginRight="@dimen/margin_dp25"
                android:background="@drawable/custom_edittext_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/padding_dp15"
                android:paddingRight="@dimen/padding_dp25"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/textsize_sp18" />

            <Button
                android:id="@+id/btn_resetpassword"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_below="@+id/edit_usereamil"
                android:layout_alignLeft="@+id/edit_usereamil"
                android:layout_alignRight="@+id/edit_usereamil"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_dp35"
                android:background="@drawable/custom_login_bg"
                android:text="Reset password"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>